# consul

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
configs/: bash.yaml  chat.yaml  coder.yaml  docs.yaml  tester.yaml
configs/agents/: pycritic.yaml
configs/prompts/: pycritic.yaml
configs/tasks/: ask_question.yaml
docs/flows/: agent_flow.md  base_flow.md  task_chat.md
src/consul/cli/: main.py
src/consul/cli/logging/: base.py
src/consul/cli/logs/: base.py
src/consul/cli/utils/: commands.py  logs.py  save.py  text.py  user_args.py
src/consul/cli_tools/: critic.py
src/consul/cli_tools/utils/: argparsers.py
src/consul/core/: settings.py
src/consul/core/agents/pycritic/: agent.py
src/consul/core/config/: base.py  flow.py  flows.py  prompts.py  tasks.py  tools.py
src/consul/core/llm/: prompts.py
src/consul/core/modules/files/: load.py
src/consul/core/schemas/: agents.py  prompts.py
src/consul/core/settings/: models.py
src/consul/flow/: base.py
src/consul/flow/agents/: base.py  docs.py  react.py
src/consul/flow/tasks/: chat.py
src/consul/flows/: base.py
src/consul/flows/agents/: react.py
src/consul/flows/tasks/: chat.py
src/consul/inject/: factory.py  tree.py
src/consul/prompt/: general.py  registry.py  tree.py
src/consul/prompts/: base.py  general.py  project.py  tree.py
src/consul/tasks/: ask.py  base.py  chat.py  explain_code.py  summarize.py
src/consul/tools/: base.py  code.py  files.py  find.py  stdio_mcp.py  tests.py  utils.py
tests/tools/: test_find_patterns.py  test_get_source_code.py
