[project]
name = "consul"
version = "0.0.1"
description = "Set of LLM Tools and Agents for assistance."
readme = "README.md"
authors = [
    { name = "Ondřej Finke", email = "ondrej.finke@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.21",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.18",
]

[project.scripts]
critic = "consul.cli_tools.critic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
cli = [
    "click>=8.1.8",
    "yaspin>=3.1.0",
]


[tool.ruff]
line-length = 88
target-version = "py312" # the python version to target
src = ["."]
show-fixes = true
unsafe-fixes = true

[tool.ruff.lint.per-file-ignores]
# ignore certain rules for specific files
# ignore assert rule in tests files
"tests/**.py" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any)
    "COM812",
    "D100",   # Missing docstring in public class
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D205",   # 1 blank line required between summary line and description
    "D211",   # no-blank-line-before-class (incomaptible with D203)
    "D212",   # multi-line-summary-first-line (incomaptible with D213)
    "D401",   # First line of docstring should be in imperative mood
    "D405",   # Section name should be properly capitalized
    "D406",   # Section name should end with a newline
    "D407",   # Missing dashed underline after section 
    "D408",   # Section underline should be in the line following the section's name
    "ERA001", # Found commented-out code
    "FIX002", # Line contains TODO, consider resolving the issue
    "ISC001",
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link on the line following this TODO
]
# select = [
#   "E",  # pycodestyle
#   "F",  # pyflakes
#   "UP", # pyupgrade,
#   "I",  # isort
#]